[package]
name = "interpreter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
rustyline = { version = "7.1.0", default-features = false, optional = true }
ahash = "0.8"

[features]
trace_execution = []
repl = ["dep:rustyline"]
default = ["trace_execution", "repl"]
